# bgzip

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: wheels.yml
dev_scripts/: profile.py  veryify.py
src/bgzip/: __init__.py  bgzip_utils.pyx  utils.pyi  utils.pyx
tests/: test_bgzip.py
