[project]
name = "bgzip"
version = "0.5.0"
description = "Utilities working with blocked gzip streams"
authors = [
    { name = "Brian Hannafious", email = "xbrianh@amorphous-industries.com" }
]
maintainers = [
    { name = "Tang Ziya", email = "tcztzy@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.5.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel.hooks.cython]
dependencies = ["hatch-cython"]

[tool.hatch.build.targets.wheel.hooks.cython.options]
compile_py = false

compile_args = [
  "-O3",
  { platforms = "darwin", arg = "-Xpreprocessor" },
]
extra_link_args = [
  { platforms = "darwin", arch = "arm64", arg = "-L/opt/homebrew/opt/libomp/lib" },
  { platforms = "darwin", arch = "x86_64", arg = "-L/usr/local/opt/libomp/lib" },
]
parallel = true

[tool.cibuildwheel]
# Disable building PyPy wheels on all platforms
skip = "pp*"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
